navbar: fixed scroll to view issues on mobile

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,10 @@
   justify-content: space-between;
   align-items: center;
   background: var(--color-black);
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
 
   padding: 1rem 2rem;
 }
